# terrian_detection

./: CMakeLists.txt  README.md  mainpage.dox  nodelet_plugins.xml  package.xml
cfg/: TerrainDetection.cfg
include/terrain_detection/: terrain_detection.h
launch/: rviz_terrain_detection.rviz  sensor_realsense.launch  terrain_detection.launch  terrain_detection_2pico.launch  terrain_detection_2pico.launch.bk  terrain_detection_2pico_HD2.launch  terrain_detection_2pico_Husky.launch  terrain_detection_Husky.launch
scripts/: laserscan2pcl.py
src/: concat_laserscans.cpp  laserscan2pcl.cpp
src/nodelets/: terrain_detection_nodelet.cpp
